SALSYS-18:Добавить валидацию

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,4 +31,9 @@ incorrect.number.of.details=Количество деталей не может 
 long.number.of.details=Количество деталей не может превышать 1000.
 incorrect.hazard.ratio=Коэффициент опасности не может быть отрицательным.
 long.hazard.ratio=Коэффициент опасности не может превышать 10.
-
+incorrect.login.error=Некорректное значения поля логин.
+required.login.error=Логин не может быть пустым.
+long.login.error=Логин не должен превышать 64 символа.
+required.password.error=Пароль не может быть пустым.
+long.password.error=Пароль не должен превышать 64 символа.
+exception.duplicate=Этот логин уже занят.
